Revert "modified tinkar-core"
This reverts commit 46219e38221a3c94bb66552e9d07b310e8602410